Kubernetes/yaml/ingress-nginx/nginx-ingress-0.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloud-ingress
  namespace: spring-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: usertype
    nginx.ingress.kubernetes.io/canary-by-header-value: 0
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: 139.217.56.122
          servicePort: 8899
        path: /(.*)
