Kubernetes/yaml/ingress-nginx/nginx-ingress-gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-gateway
  namespace: spring-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($http_usertype ~ "0") {
        proxy_pass http://120.240.0.222:8899;
        break;
      }

spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: cloud-gateway
          servicePort: 1925
        path: /(.*)
