Kubernetes/yaml/ingress-nginx/nginx-ingress-visitor.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloud-ingress
  namespace: spring-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: cloud-gateway
          servicePort: 1925
        path: /(.*)
