Kubernetes/yaml/ingress-nginx/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloud-ingress
  namespace: spring-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: usertype
    nginx.ingress.kubernetes.io/canary-by-header-value: 1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: cloud-gateway
          servicePort: 1925
        path: /(.*)
      - backend:
          serviceName: eureka
          servicePort: 1025
        path: /eureka(/|$)(.*)
